packages/agent_dart/macos/Classes/frb.h

typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_PhraseToSeedReq {
  struct wire_uint_8_list *phrase;
  struct wire_uint_8_list *password;
} wire_PhraseToSeedReq;
typedef struct wire_BLSVerifyReq {
  struct wire_uint_8_list *signature;
  struct wire_uint_8_list *message;
  struct wire_uint_8_list *public_key;
} wire_BLSVerifyReq;
typedef struct wire_ED25519FromSeedReq {
  struct wire_uint_8_list *seed;
} wire_ED25519FromSeedReq;
typedef struct wire_ED25519SignReq {
  struct wire_uint_8_list *seed;
  struct wire_uint_8_list *message;
} wire_ED25519SignReq;
typedef struct wire_ED25519VerifyReq {
  struct wire_uint_8_list *sig;
  struct wire_uint_8_list *message;
  struct wire_uint_8_list *pub_key;
} wire_ED25519VerifyReq;
typedef struct wire_P256FromSeedReq {
  struct wire_uint_8_list *seed;
} wire_P256FromSeedReq;
typedef struct wire_P256SignWithSeedReq {
  struct wire_uint_8_list *msg;
  struct wire_uint_8_list *seed;
} wire_P256SignWithSeedReq;
typedef struct wire_P256VerifyReq {
  struct wire_uint_8_list *message_hash;
  struct wire_uint_8_list *signature_bytes;
  struct wire_uint_8_list *public_key_bytes;
} wire_P256VerifyReq;
typedef struct wire_P256ShareSecretReq {
  struct wire_uint_8_list *seed;
  struct wire_uint_8_list *public_key_raw_bytes;
} wire_P256ShareSecretReq;
typedef struct wire_SchnorrFromSeedReq {
  struct wire_uint_8_list *seed;
} wire_SchnorrFromSeedReq;
typedef struct wire_SchnorrSignWithSeedReq {
  struct wire_uint_8_list *msg;
  struct wire_uint_8_list *seed;
  struct wire_uint_8_list *aux_rand;
} wire_SchnorrSignWithSeedReq;
typedef struct wire_SchnorrVerifyReq {
  struct wire_uint_8_list *message_hash;
  struct wire_uint_8_list *signature_bytes;
  struct wire_uint_8_list *public_key_bytes;
} wire_SchnorrVerifyReq;
typedef struct wire_AesEncryptReq {
  struct wire_uint_8_list *key;
  struct wire_uint_8_list *iv;
  struct wire_uint_8_list *message;
} wire_AesEncryptReq;
typedef struct wire_AesDecryptReq {
  struct wire_uint_8_list *key;
  struct wire_uint_8_list *iv;
  struct wire_uint_8_list *cipher_text;
} wire_AesDecryptReq;
typedef struct wire_PBKDFDeriveReq {
  struct wire_uint_8_list *password;
  struct wire_uint_8_list *salt;
  uint32_t c;
} wire_PBKDFDeriveReq;
typedef struct wire_ScriptDeriveReq {
  struct wire_uint_8_list *password;
  struct wire_uint_8_list *salt;
  uint32_t n;
  uint32_t p;
  uint32_t r;
} wire_ScriptDeriveReq;
typedef struct wire_PsbtToTxidReq {
  struct wire_uint_8_list *psbt_str;
} wire_PsbtToTxidReq;
typedef struct wire_PsbtToTxReq {
  struct wire_uint_8_list *psbt_str;
} wire_PsbtToTxReq;
typedef struct wire_PsbtFreeRateReq {
  struct wire_uint_8_list *psbt_str;
} wire_PsbtFreeRateReq;
typedef struct wire_PsbtFreeAmountReq {
  struct wire_uint_8_list *psbt_str;
} wire_PsbtFreeAmountReq;
typedef struct wire_PsbtCombineReq {
  struct wire_uint_8_list *psbt_str;
  struct wire_uint_8_list *other;
} wire_PsbtCombineReq;
typedef struct wire_GetAddressReq {
  struct wire_uint_8_list *public_key;
  struct wire_uint_8_list *network;
} wire_GetAddressReq;
typedef struct wire_PsbtWalletReq {
  struct wire_uint_8_list *prv;
  struct wire_uint_8_list *address_type;
  struct wire_uint_8_list *network;
} wire_PsbtWalletReq;
typedef union AddressIndexKind {
  struct wire_AddressIndex_New *New;
  struct wire_AddressIndex_LastUnused *LastUnused;
  struct wire_AddressIndex_Peek *Peek;
} AddressIndexKind;
typedef struct wire_AddressIndex {
  int32_t tag;
  union AddressIndexKind *kind;
} wire_AddressIndex;
void wire_psbt_wallet_sign(int64_t port_,
                           struct wire_PsbtWalletReq *wallet,
                           struct wire_uint_8_list *psbt,
                           bool is_multi_sig);
void wire_psbt_util_asm_to_hex(int64_t port_, struct wire_uint_8_list *asm);
struct wire_AddressIndex *new_box_autoadd_address_index_0(void);
struct wire_AesDecryptReq *new_box_autoadd_aes_decrypt_req_0(void);
struct wire_AesEncryptReq *new_box_autoadd_aes_encrypt_req_0(void);
struct wire_BLSVerifyReq *new_box_autoadd_bls_verify_req_0(void);
struct wire_ED25519FromSeedReq *new_box_autoadd_ed_25519_from_seed_req_0(void);
struct wire_ED25519SignReq *new_box_autoadd_ed_25519_sign_req_0(void);
struct wire_ED25519VerifyReq *new_box_autoadd_ed_25519_verify_req_0(void);
float *new_box_autoadd_f32_0(float value);
struct wire_GetAddressReq *new_box_autoadd_get_address_req_0(void);
struct wire_P256FromSeedReq *new_box_autoadd_p_256_from_seed_req_0(void);
struct wire_P256ShareSecretReq *new_box_autoadd_p_256_share_secret_req_0(void);
struct wire_P256SignWithSeedReq *new_box_autoadd_p_256_sign_with_seed_req_0(void);
struct wire_P256VerifyReq *new_box_autoadd_p_256_verify_req_0(void);
struct wire_PBKDFDeriveReq *new_box_autoadd_pbkdf_derive_req_0(void);
struct wire_PhraseToSeedReq *new_box_autoadd_phrase_to_seed_req_0(void);
struct wire_PsbtCombineReq *new_box_autoadd_psbt_combine_req_0(void);
struct wire_PsbtFreeAmountReq *new_box_autoadd_psbt_free_amount_req_0(void);
struct wire_PsbtFreeRateReq *new_box_autoadd_psbt_free_rate_req_0(void);
struct wire_PsbtToTxReq *new_box_autoadd_psbt_to_tx_req_0(void);
struct wire_PsbtToTxidReq *new_box_autoadd_psbt_to_txid_req_0(void);
struct wire_PsbtWalletReq *new_box_autoadd_psbt_wallet_req_0(void);
struct wire_SchnorrFromSeedReq *new_box_autoadd_schnorr_from_seed_req_0(void);
struct wire_SchnorrSignWithSeedReq *new_box_autoadd_schnorr_sign_with_seed_req_0(void);
struct wire_SchnorrVerifyReq *new_box_autoadd_schnorr_verify_req_0(void);
struct wire_ScriptDeriveReq *new_box_autoadd_script_derive_req_0(void);