packages/agent_dart_ffi/lib/src/bridge_generated.io.dart


  late final _wire_psbt_wallet_signPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_PsbtWalletReq>, ffi.Pointer<wire_uint_8_list>, ffi.Bool)>>('wire_psbt_wallet_sign');
  late final _wire_psbt_wallet_sign = _wire_psbt_wallet_signPtr.asFunction<void Function(int, ffi.Pointer<wire_PsbtWalletReq>, ffi.Pointer<wire_uint_8_list>, bool)>();

  void wire_psbt_util_asm_to_hex(
    int port_,
    ffi.Pointer<wire_uint_8_list> arg1,
  ) {
    return _wire_psbt_util_asm_to_hex(
      port_,
      arg1,
    );
  }

  late final _wire_psbt_util_asm_to_hexPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int64, ffi.Pointer<wire_uint_8_list>)>>('wire_psbt_util_asm_to_hex');
  late final _wire_psbt_util_asm_to_hex = _wire_psbt_util_asm_to_hexPtr.asFunction<void Function(int, ffi.Pointer<wire_uint_8_list>)>();

  ffi.Pointer<wire_AddressIndex> new_box_autoadd_address_index_0() {
    return _new_box_autoadd_address_index_0();
  }

  late final _new_box_autoadd_address_index_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_AddressIndex> Function()>>('new_box_autoadd_address_index_0');
  late final _new_box_autoadd_address_index_0 = _new_box_autoadd_address_index_0Ptr.asFunction<ffi.Pointer<wire_AddressIndex> Function()>();

  ffi.Pointer<wire_AesDecryptReq> new_box_autoadd_aes_decrypt_req_0() {
    return _new_box_autoadd_aes_decrypt_req_0();
  }

  late final _new_box_autoadd_aes_decrypt_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_AesDecryptReq> Function()>>('new_box_autoadd_aes_decrypt_req_0');
  late final _new_box_autoadd_aes_decrypt_req_0 = _new_box_autoadd_aes_decrypt_req_0Ptr.asFunction<ffi.Pointer<wire_AesDecryptReq> Function()>();

  ffi.Pointer<wire_AesEncryptReq> new_box_autoadd_aes_encrypt_req_0() {
    return _new_box_autoadd_aes_encrypt_req_0();
  }

  late final _new_box_autoadd_aes_encrypt_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_AesEncryptReq> Function()>>('new_box_autoadd_aes_encrypt_req_0');
  late final _new_box_autoadd_aes_encrypt_req_0 = _new_box_autoadd_aes_encrypt_req_0Ptr.asFunction<ffi.Pointer<wire_AesEncryptReq> Function()>();

  ffi.Pointer<wire_BLSVerifyReq> new_box_autoadd_bls_verify_req_0() {
    return _new_box_autoadd_bls_verify_req_0();
  }

  late final _new_box_autoadd_bls_verify_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_BLSVerifyReq> Function()>>('new_box_autoadd_bls_verify_req_0');
  late final _new_box_autoadd_bls_verify_req_0 = _new_box_autoadd_bls_verify_req_0Ptr.asFunction<ffi.Pointer<wire_BLSVerifyReq> Function()>();

  ffi.Pointer<wire_ED25519FromSeedReq> new_box_autoadd_ed_25519_from_seed_req_0() {
    return _new_box_autoadd_ed_25519_from_seed_req_0();
  }

  late final _new_box_autoadd_ed_25519_from_seed_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_ED25519FromSeedReq> Function()>>('new_box_autoadd_ed_25519_from_seed_req_0');
  late final _new_box_autoadd_ed_25519_from_seed_req_0 = _new_box_autoadd_ed_25519_from_seed_req_0Ptr.asFunction<ffi.Pointer<wire_ED25519FromSeedReq> Function()>();

  ffi.Pointer<wire_ED25519SignReq> new_box_autoadd_ed_25519_sign_req_0() {
    return _new_box_autoadd_ed_25519_sign_req_0();
  }

  late final _new_box_autoadd_ed_25519_sign_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_ED25519SignReq> Function()>>('new_box_autoadd_ed_25519_sign_req_0');
  late final _new_box_autoadd_ed_25519_sign_req_0 = _new_box_autoadd_ed_25519_sign_req_0Ptr.asFunction<ffi.Pointer<wire_ED25519SignReq> Function()>();

  ffi.Pointer<wire_ED25519VerifyReq> new_box_autoadd_ed_25519_verify_req_0() {
    return _new_box_autoadd_ed_25519_verify_req_0();
  }

  late final _new_box_autoadd_ed_25519_verify_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_ED25519VerifyReq> Function()>>('new_box_autoadd_ed_25519_verify_req_0');
  late final _new_box_autoadd_ed_25519_verify_req_0 = _new_box_autoadd_ed_25519_verify_req_0Ptr.asFunction<ffi.Pointer<wire_ED25519VerifyReq> Function()>();

  ffi.Pointer<ffi.Float> new_box_autoadd_f32_0(
    double value,
  ) {
    return _new_box_autoadd_f32_0(
      value,
    );
  }

  late final _new_box_autoadd_f32_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Float> Function(ffi.Float)>>('new_box_autoadd_f32_0');
  late final _new_box_autoadd_f32_0 = _new_box_autoadd_f32_0Ptr.asFunction<ffi.Pointer<ffi.Float> Function(double)>();

  ffi.Pointer<wire_GetAddressReq> new_box_autoadd_get_address_req_0() {
    return _new_box_autoadd_get_address_req_0();
  }

  late final _new_box_autoadd_get_address_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_GetAddressReq> Function()>>('new_box_autoadd_get_address_req_0');
  late final _new_box_autoadd_get_address_req_0 = _new_box_autoadd_get_address_req_0Ptr.asFunction<ffi.Pointer<wire_GetAddressReq> Function()>();

  ffi.Pointer<wire_P256FromSeedReq> new_box_autoadd_p_256_from_seed_req_0() {
    return _new_box_autoadd_p_256_from_seed_req_0();
  }

  late final _new_box_autoadd_p_256_from_seed_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_P256FromSeedReq> Function()>>('new_box_autoadd_p_256_from_seed_req_0');
  late final _new_box_autoadd_p_256_from_seed_req_0 = _new_box_autoadd_p_256_from_seed_req_0Ptr.asFunction<ffi.Pointer<wire_P256FromSeedReq> Function()>();

  ffi.Pointer<wire_P256ShareSecretReq> new_box_autoadd_p_256_share_secret_req_0() {
    return _new_box_autoadd_p_256_share_secret_req_0();
  }

  late final _new_box_autoadd_p_256_share_secret_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_P256ShareSecretReq> Function()>>('new_box_autoadd_p_256_share_secret_req_0');
  late final _new_box_autoadd_p_256_share_secret_req_0 = _new_box_autoadd_p_256_share_secret_req_0Ptr.asFunction<ffi.Pointer<wire_P256ShareSecretReq> Function()>();

  ffi.Pointer<wire_P256SignWithSeedReq> new_box_autoadd_p_256_sign_with_seed_req_0() {
    return _new_box_autoadd_p_256_sign_with_seed_req_0();
  }

  late final _new_box_autoadd_p_256_sign_with_seed_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_P256SignWithSeedReq> Function()>>('new_box_autoadd_p_256_sign_with_seed_req_0');
  late final _new_box_autoadd_p_256_sign_with_seed_req_0 = _new_box_autoadd_p_256_sign_with_seed_req_0Ptr.asFunction<ffi.Pointer<wire_P256SignWithSeedReq> Function()>();

  ffi.Pointer<wire_P256VerifyReq> new_box_autoadd_p_256_verify_req_0() {
    return _new_box_autoadd_p_256_verify_req_0();
  }

  late final _new_box_autoadd_p_256_verify_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_P256VerifyReq> Function()>>('new_box_autoadd_p_256_verify_req_0');
  late final _new_box_autoadd_p_256_verify_req_0 = _new_box_autoadd_p_256_verify_req_0Ptr.asFunction<ffi.Pointer<wire_P256VerifyReq> Function()>();

  ffi.Pointer<wire_PBKDFDeriveReq> new_box_autoadd_pbkdf_derive_req_0() {
    return _new_box_autoadd_pbkdf_derive_req_0();
  }

  late final _new_box_autoadd_pbkdf_derive_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_PBKDFDeriveReq> Function()>>('new_box_autoadd_pbkdf_derive_req_0');
  late final _new_box_autoadd_pbkdf_derive_req_0 = _new_box_autoadd_pbkdf_derive_req_0Ptr.asFunction<ffi.Pointer<wire_PBKDFDeriveReq> Function()>();

  ffi.Pointer<wire_PhraseToSeedReq> new_box_autoadd_phrase_to_seed_req_0() {
    return _new_box_autoadd_phrase_to_seed_req_0();
  }

  late final _new_box_autoadd_phrase_to_seed_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_PhraseToSeedReq> Function()>>('new_box_autoadd_phrase_to_seed_req_0');
  late final _new_box_autoadd_phrase_to_seed_req_0 = _new_box_autoadd_phrase_to_seed_req_0Ptr.asFunction<ffi.Pointer<wire_PhraseToSeedReq> Function()>();

  ffi.Pointer<wire_PsbtCombineReq> new_box_autoadd_psbt_combine_req_0() {
    return _new_box_autoadd_psbt_combine_req_0();
  }

  late final _new_box_autoadd_psbt_combine_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_PsbtCombineReq> Function()>>('new_box_autoadd_psbt_combine_req_0');
  late final _new_box_autoadd_psbt_combine_req_0 = _new_box_autoadd_psbt_combine_req_0Ptr.asFunction<ffi.Pointer<wire_PsbtCombineReq> Function()>();

  ffi.Pointer<wire_PsbtFreeAmountReq> new_box_autoadd_psbt_free_amount_req_0() {
    return _new_box_autoadd_psbt_free_amount_req_0();
  }

  late final _new_box_autoadd_psbt_free_amount_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_PsbtFreeAmountReq> Function()>>('new_box_autoadd_psbt_free_amount_req_0');
  late final _new_box_autoadd_psbt_free_amount_req_0 = _new_box_autoadd_psbt_free_amount_req_0Ptr.asFunction<ffi.Pointer<wire_PsbtFreeAmountReq> Function()>();

  ffi.Pointer<wire_PsbtFreeRateReq> new_box_autoadd_psbt_free_rate_req_0() {
    return _new_box_autoadd_psbt_free_rate_req_0();
  }

  late final _new_box_autoadd_psbt_free_rate_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_PsbtFreeRateReq> Function()>>('new_box_autoadd_psbt_free_rate_req_0');
  late final _new_box_autoadd_psbt_free_rate_req_0 = _new_box_autoadd_psbt_free_rate_req_0Ptr.asFunction<ffi.Pointer<wire_PsbtFreeRateReq> Function()>();

  ffi.Pointer<wire_PsbtToTxReq> new_box_autoadd_psbt_to_tx_req_0() {
    return _new_box_autoadd_psbt_to_tx_req_0();
  }

  late final _new_box_autoadd_psbt_to_tx_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_PsbtToTxReq> Function()>>('new_box_autoadd_psbt_to_tx_req_0');
  late final _new_box_autoadd_psbt_to_tx_req_0 = _new_box_autoadd_psbt_to_tx_req_0Ptr.asFunction<ffi.Pointer<wire_PsbtToTxReq> Function()>();

  ffi.Pointer<wire_PsbtToTxidReq> new_box_autoadd_psbt_to_txid_req_0() {
    return _new_box_autoadd_psbt_to_txid_req_0();
  }

  late final _new_box_autoadd_psbt_to_txid_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_PsbtToTxidReq> Function()>>('new_box_autoadd_psbt_to_txid_req_0');
  late final _new_box_autoadd_psbt_to_txid_req_0 = _new_box_autoadd_psbt_to_txid_req_0Ptr.asFunction<ffi.Pointer<wire_PsbtToTxidReq> Function()>();

  ffi.Pointer<wire_PsbtWalletReq> new_box_autoadd_psbt_wallet_req_0() {
    return _new_box_autoadd_psbt_wallet_req_0();
  }

  late final _new_box_autoadd_psbt_wallet_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_PsbtWalletReq> Function()>>('new_box_autoadd_psbt_wallet_req_0');
  late final _new_box_autoadd_psbt_wallet_req_0 = _new_box_autoadd_psbt_wallet_req_0Ptr.asFunction<ffi.Pointer<wire_PsbtWalletReq> Function()>();

  ffi.Pointer<wire_SchnorrFromSeedReq> new_box_autoadd_schnorr_from_seed_req_0() {
    return _new_box_autoadd_schnorr_from_seed_req_0();
  }

  late final _new_box_autoadd_schnorr_from_seed_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_SchnorrFromSeedReq> Function()>>('new_box_autoadd_schnorr_from_seed_req_0');
  late final _new_box_autoadd_schnorr_from_seed_req_0 = _new_box_autoadd_schnorr_from_seed_req_0Ptr.asFunction<ffi.Pointer<wire_SchnorrFromSeedReq> Function()>();

  ffi.Pointer<wire_SchnorrSignWithSeedReq> new_box_autoadd_schnorr_sign_with_seed_req_0() {
    return _new_box_autoadd_schnorr_sign_with_seed_req_0();
  }

  late final _new_box_autoadd_schnorr_sign_with_seed_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_SchnorrSignWithSeedReq> Function()>>('new_box_autoadd_schnorr_sign_with_seed_req_0');
  late final _new_box_autoadd_schnorr_sign_with_seed_req_0 = _new_box_autoadd_schnorr_sign_with_seed_req_0Ptr.asFunction<ffi.Pointer<wire_SchnorrSignWithSeedReq> Function()>();

  ffi.Pointer<wire_SchnorrVerifyReq> new_box_autoadd_schnorr_verify_req_0() {
    return _new_box_autoadd_schnorr_verify_req_0();
  }

  late final _new_box_autoadd_schnorr_verify_req_0Ptr = _lookup<ffi.NativeFunction<ffi.Pointer<wire_SchnorrVerifyReq> Function()>>('new_box_autoadd_schnorr_verify_req_0');
  late final _new_box_autoadd_schnorr_verify_req_0 = _new_box_autoadd_schnorr_verify_req_0Ptr.asFunction<ffi.Pointer<wire_SchnorrVerifyReq> Function()>();

  ffi.Pointer<wire_ScriptDeriveReq> new_box_autoadd_script_derive_req_0() {
    return _new_box_autoadd_script_derive_req_0();
  }
